# libactors

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
include/: actors.h
src/: actors.c
tests/: actors.c  assert.c  filter.c  ring.c  sleepers.c
